# Anantya_AI

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  DELTAT.ASC  SDUI_BACKEND_CHANGES.md  SDUI_STRATEGY.md  sample_birth_chart_response.json  sample_birth_chart_sdui_response.json  sample_daily_horoscope_response.json  test_moon_accuracy.py
1.0/: README.md
1.0/config/: output_schema_reference.json  prompt_stack_example.yaml
1.0/docs/: 01_master_prompt_v1.md  02_knowledge_framework_and_surface_map.md  03_output_schemas.md  ANANTYA_REPORT_FRAMEWORK_v2.md  BEFORE_AFTER_EXAMPLES_v1.4.md  CHANGELOG.md  PRESENT_PAST_FUTURE_EXAMPLES_2026-03-20.md  QA_REVIEW_2026-03-18.md  QA_REVIEW_2026-03-20.md  TEAM_HANDOFF_v1.4.md
1.0/prompts/core/: 01_core_identity.txt  02_knowledge_framework.txt  03_global_translation_layer.txt  04_ethics_guardrails.txt  05_reasoning_contract.txt  synthesis_core_condensed.txt
1.0/prompts/features/: birth_chart_core.txt  birth_chart_forces.txt  chart_reveal.txt  (+12 more)
de440_engine/pl7astro/: __init__.py  cache.py  chart.py  config.py
llm/: .env.example  pipeline.py  pyproject.toml  run_test.py  sdui.py
llm/core/: client.py  config.py  generator.py
llm/engine/: bridge.py  calculator.py  constants.py  panchanga.py  transits.py  varga.py
llm/engine/rules/: __init__.py  context.py  evaluator.py  loader.py  sample_rules.json  schema.py  test_loader.py
llm/guards/: response_validator.py  style_guard.py
llm/prompts/: assembler.py
llm/schemas/: inputs.py  surfaces.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
(+14 files in other folders)
